styles/style.css
.page {
  min-width: 1100px;
  max-width: 1600px;
  margin: 0 auto;
  background-color: #ffffff;
  font-family: Arial, sans-serif;
  font-size: 16px;
  line-height: 20px;
}

/* ===== HEADER ===== */

.header {
  display: flex;
  flex-direction: column;
  height: 100vh;
  min-height: 720px;
  max-height: 800px;
  padding: 30px 80px 40px;
  position: relative;
  box-sizing: border-box;
}

.nav {
  display: flex;
  justify-content: space-between;
}

.nav__logo {
  max-width: 186px;
}

.nav__links {
  display: flex;
  column-gap: 20px;
  list-style-type: none;
  padding-left: 0;
  margin: 8px 0 0;
}

.nav__link {
  color: #000000;
  text-decoration: none;
  font-weight: bold;
}

.header__content {
  display: flex;
  justify-content: space-between;
  align-items: flex-start;
}

.header__title {
  max-width: 635px;
  font-size: 62px;
  line-height: 76px;
  font-weight: 500;
  margin: 128px 0 32px;
}

.header__description {
  max-width: 515px;
  font-size: 20px;
  line-height: 30px;
  margin: 0;
}

.header__image {
  max-width: 636px;
}

.header__footer {
  margin-top: auto;
  width: 100%;
  display: flex;
  align-items: center;
  justify-content: flex-end;
  box-sizing: border-box;
}

.header__link {
  color: #2f80ed;
  text-decoration: none;
}

.header__address {
  margin: 0;
  color: #838383;
}

/* ===== STAFF ===== */

.staff {
  background-image: url("../images/staff_picks_background.jpg");
  padding: 100px 0 140px;
}

.staff__title {
  text-align: center;
  font-size: 44px;
  line-height: 52px;
  font-weight: 400;
  margin: 0 0 24px;
  color: #ffffff;
}

.staff__subtitle {
  text-align: center;
  font-size: 20px;
  line-height: 30px;
  font-weight: 400;
  margin: 0;
  color: #ffffff;
}

.staff__cards {
  max-width: 760px;
  margin: 68px auto 0;
  padding-left: 0;
  list-style-type: none;
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  gap: 40px;
}

/* ===== CARD ===== */

.card {
  width: 360px;
  height: 420px;
  background-color: #fff;
  border-radius: 6px;
  padding: 32px 40px 20px 32px;
  box-sizing: border-box;
  display: flex;
  flex-direction: column;
}

.card__content {
  width: 100%;
  height: 100%;
  display: flex;
  flex-direction: column;
}

.card__title {
  font-size: 20px;
  line-height: 30px;
  font-weight: 700;
  margin: 0;
}

.card__text {
  margin: 20px 0 0;
  font-size: 16px;
  line-height: 24px;
}

.card__footer {
  margin: 0;
  font-size: 14px;
  line-height: 20px;
  color: #838383;
}

.card__author {
  font-size: 14px;
  color: #838383;
  margin: 0;
}

/* ===== EVENTS ===== */

.events {
  padding: 100px 0 120px 80px;
  display: flex;
  align-items: start;
  justify-content: space-between;
  box-sizing: border-box;
  background-color: #f2f2f2;
}

.events__content {
  flex-basis: 580px;
}

.events__heading {
  font-size: 20px;
  font-weight: 500;
  line-height: 30px;
  margin: 0;
}

.events__title {
  font-size: 44px;
  font-weight: 500;
  line-height: 52px;
  margin: 32px 0 0;
}

.events__info-section {
  margin-top: 32px;
}

.event-info__item {
  display: flex;
  align-items: center;
  margin-bottom: 4px;
  font-weight: 500;
}

.event-info__icon {
  background-repeat: no-repeat;
  background-position: center;
  margin-right: 12px;
  width: 24px;
  height: 24px;
}

.event-info__text {
  font-size: 20px;
  font-weight: 500;
  line-height: 30px;
  margin: 0;
}

.events__description {
  margin: 40px 0 60px;
}

.events__more {
  color: #2f80ed;
  text-decoration: none;
}

.events__cover {
  flex-grow: 1;
  flex-shrink: 0;
  flex-basis: 780px;
  max-width: 780px;
  position: relative;
}

.events__image {
  max-width: 100%;
}

.person {
  position: absolute;
  display: flex;
  align-items: center;
  flex-direction: column;
  gap: 10px;
}

.person_name_feynman {
  top: -30px;
  left: 319px;
}

.person_name_burbidge {
  top: 96px;
  right: 125px;
}

.person_name_cannon {
  bottom: 18px;
  right: 216px;
}

.person_name_mitchell {
  bottom: 82px;
  left: 142px;
}

.person_name_tarter {
  top: 79px;
  left: 159px;
}

.person__image {
  max-width: 100%;
}

.person__image_size_l {
  width: 140px;
}

.person__image_size_m {
  width: 100px;
}

.person__image_size_s {
  width: 80px;
}

.person__caption {
  text-align: center;
  font-size: 14px;
  margin: 0;
}

/* ===== MEMBERSHIP ===== */

.membership {
  padding: 100px 0 140px;
  background-color: #057bf2;
  color: #ffffff;
}

.membership__title {
  max-width: 574px;
  margin: 0 auto;
  text-align: center;
  font-size: 44px;
  font-weight: 500;
  line-height: 52px;
}

.membership__steps {
  list-style-type: none;
  padding: 0;
  margin: 100px 0 0;
  display: flex;
  justify-content: center;
  gap: 40px;
}

.step {
  flex-basis: 220px;
}

.step__title {
  margin: 0;
  font-size: 20px;
  line-height: 30px;
  font-weight: 700;
  display: flex;
  align-items: center;
}

.step__icon {
  margin-left: 20px;
}

.step__description {
  margin: 10px 0 0;
}

/* ===== FOOTER ===== */

.footer {
  box-sizing: border-box;
  background-color: #1f1f1f;
  color: #ffffff;
  padding: 60px 80px;
  font-size: 16px;
  line-height: 20px;
}

.footer__columns {
  display: flex;
  justify-content: space-between;
  gap: 80px;
  margin-bottom: 60px;
}

.footer__column_content_hours {
}

.footer__column_content_social {
}

.footer__logo {
  width: 58px;
  height: 80px;
}

.footer__column-heading {
  font-size: 16px;
  line-height: 20px;
  font-weight: bold;
  margin: 0 0 20px;
}

.footer__list {
  list-style-type: none;
  padding: 0;
  margin: 0;
}

.footer__list-item {
  margin-bottom: 10px;
}

.footer__list-item:last-child {
  margin-bottom: 0;
}

.footer__column-link {
  color: white;
  text-decoration: none;
  display: flex;
  align-items: center;
  gap: 10px;
}

.footer__social-icon {
  width: 16px;
  height: 16px;
}

.footer__copyright {
  margin: 0;
}

